<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="presenter"
            type="com.tencent.qcloud.tim.demo.utils.ClickPresenter" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="?attr/demo_login_ic_logo"
                tools:src="@drawable/demo_ic_logo_light" />

            <!--真实姓名-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/actual_name_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_actual_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--手机号-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--验证码-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_verification"
                    app:layout_constraintEnd_toEndOf="@id/btn_get_verify_code"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_verification_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/btn_get_verify_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{(v)->presenter.onClick(v)}"
                    android:text="@string/get_verify_code"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--紧急联系人姓名-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emergency_contact_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_emergency_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--紧急联系人联系电话-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_emergency_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--昵称-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/account_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nick_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <!--密码-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_account_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="44.16dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="28.8dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/button_border"
                android:gravity="center"
                android:onClick="@{(v)->presenter.onClick(v)}"
                android:text="@string/button_register"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                tools:background="@drawable/blue_btn_bg" />


        </LinearLayout>


    </RelativeLayout>
</layout>
