<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">


        <LinearLayout
            android:id="@+id/modify_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="19dp"
            android:layout_toStartOf="@id/language_area"
            android:orientation="horizontal"
            tools:visibility="visible">

            <ImageView
                android:layout_width="17.28dp"
                android:layout_height="17.28dp"
                android:layout_gravity="center"
                android:background="@drawable/demo_login_theme_icon_light" />

            <TextView
                android:id="@+id/demo_login_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.7dp"
                android:layout_marginRight="5.7dp"
                android:text="@string/modify_theme"
                android:textColor="@color/demo_login_theme_language_text_color_light"
                android:textSize="13.44sp" />

            <ImageView
                android:layout_width="9.6dp"
                android:layout_height="9.6dp"
                android:layout_gravity="center"
                android:background="@drawable/demo_login_language_arrow_light" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/language_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="28dp"
            android:orientation="horizontal"
            tools:visibility="visible">

            <ImageView
                android:layout_width="17.28dp"
                android:layout_height="17.28dp"
                android:layout_gravity="center"
                android:background="@drawable/demo_login_language_icon_light" />

            <TextView
                android:id="@+id/demo_login_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5.7dp"
                android:layout_marginRight="5.7dp"
                android:text="@string/demo_language"
                android:textColor="@color/demo_login_theme_language_text_color_light"
                android:textSize="13.44sp" />

            <ImageView
                android:layout_width="9.6dp"
                android:layout_height="9.6dp"
                android:layout_gravity="center"
                android:background="@drawable/demo_login_language_arrow_light" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="125dp"
                android:layout_gravity="center_horizontal"
                android:background="?attr/demo_login_ic_logo"
                tools:src="@drawable/demo_ic_logo_light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/account"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/login_user"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/account_hint"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/my_cursor"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/item_split_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/password"
                    android:textColor="#000"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/password_hint"
                    android:singleLine="true"
                    android:textCursorDrawable="@drawable/my_cursor"
                    android:textSize="18sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/item_split_color" />

            <TextView
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="44.16dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="28.8dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/button_border"
                android:gravity="center"
                android:text="@string/button_login"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                tools:background="@drawable/blue_btn_bg" />

            <TextView
                android:id="@+id/go_register_btn"
                android:layout_width="match_parent"
                android:layout_height="44.16dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="28.8dp"
                android:layout_marginRight="6dp"
                android:background="@drawable/button_border"
                android:gravity="center"
                android:text="@string/button_go_register"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                tools:background="@drawable/blue_btn_bg" />

        </LinearLayout>


    </RelativeLayout>
</layout>
